feat(b): support get server tool version&latest version
